2004-08-28  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b130

	* Fix: view_album was a little b0rked when frames around thumbs and subalbums where different

	* Change: Skin bars002. Its a side by side layout.

	* Fix: There was always a "." when Date of last comment was enabled.
	  Caught by Dariush.

2004-08-26  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b129

	* Change: Remove class .vaspacer from all skins.

	* Fix: Corrected invalid CSS and removed margin-left inside a centered div.
	       (fixes alignment in Opera 7.x)

	* "Fix": Vertical center thumbnails again.

2004-08-25 Christian Mohn <h0bbel@p0ggel.org> 1.4.5-cvs-b128

        * Change: Replaced "header" with "footer" in html_wrap/ footer files
		

2004-08-25 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b127

	* Change: Use divs instead of tables for view_album.php

2004-08-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b126

	* Fix:  Long filename / disclosure fix

	* Fix:  Sorting by caption ignored albums, because they have no "caption"
	  It now sorts them by their titles.

	* Change: Add getGUID() to prevent code repetition

2004-08-20  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b125

	* Change:  different div tags in login.php as well as centered text 
		boxes.  This is a temporary fix until the full review of
		ideas for CSS is finished.

2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b124

	* Change:  Minor wording changes

2004-08-19  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b123

	* GR protocol: now returning the max image size for albums in addition
	  to the intermediate size.
	* gallery_remote2.php: removed output buffering.

2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b122

        * Fix: Make doubly-sure that we're setting mambo session vars when
          embedded, to prevent the 'No info' error.

2004-08-19  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b121

	* Fix: Typos.
