@@ -237,12 +237,12 @@ TD, P
  
 .vafloat /* float for view album - text */
  {
- float: center;
+ float: none;
  }
  
 .vafloat2 /* float for view album - images */
  {
-  float: center;
+  float: none;
  }
  
 .vasummary /* controls the view of Album summary */
