@@ -1,3 +1,10 @@
+2004-08-28  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b131
+
+	* New: Added optional Parameter $extraJS to popup_link()
+
+	* Change: If you click on the link to view a screenshot for Skins,
+	  its also selected in selectbox.
+
 2004-08-28  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b130
 
 	* Fix: view_album was a little b0rked when frames around thumbs and subalbums where different
